--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
-/* Made with love by Mutiullah Samim*/
-
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html, body {
-    background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+    background-image: url('https://ak2.picdn.net/shutterstock/videos/12819422/thumb/1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
